--- a/src/app/home/login/login.component.css
+++ b/src/app/home/login/login.component.css
@@ -1,6 +1,6 @@
 .gallo-inputs{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  /*padding-top: 1rem;
+  padding-bottom: 1rem;*/
   padding-right: 3rem;
   padding-left: 3rem;
   background-color: rgba(0,0,0,0);
